--- a/index.html
+++ b/index.html
@@ -35,14 +35,21 @@ Note: Be sure to add <link rel="stylesheet" href="styles.css"> in your HTML to l
     <div class="extra-title">
       <h3>Here's a time line of Dr.Borlaug's life:</h3>
       <ul>
-        <li><h2>1914</h2></li>
-        <li><h2>1933</h2></li>
-        <li><h2>1935</h2></li>
-        <li><h2>1937</h2></li>
-        <li><h2>1938</h2></li>
-        <li><h2>1941</h2></li>
-        <li><h2>1942</h2></li>
-        <li><h2>1944</h2></li>
+        <li>
+          <h2>1914</h2>
+          - Lorem, ipsum dolor.
+        </li>
+        <li>
+          <h2>1933</h2>
+          - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam
+          perspiciatis dolores obcaecati.
+        </li>
+        <li><h2>1935</h2>- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti omnis quidem architecto nemo adipisci alias exercitationem?</li>
+        <li><h2>1937</h2>- Lorem ipsum dolor sit amet consectetur.</li>
+        <li><h2>1938</h2>- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus facere iusto hic, maiores reprehenderit excepturi voluptatum tempore.</li>
+        <li><h2>1941</h2>- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, mollitia. Totam sequi vitae laudantium quos, aliquid doloremque.</li>
+        <li><h2>1942</h2>- Lorem ipsum dolor sit.</li>
+        <li><h2>1944</h2>- Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, necessitatibus reiciendis dolorem consequuntur corporis facere aspernatur. Provident blanditiis sequi odit!</li>
         <li><h2>1945</h2></li>
         <li><h2>1953</h2></li>
         <li><h2>1962</h2></li>
@@ -63,5 +70,7 @@ Note: Be sure to add <link rel="stylesheet" href="styles.css"> in your HTML to l
         minus?
       </p>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
