--- a/index.html
+++ b/index.html
@@ -25,40 +25,120 @@ Note: Be sure to add <link rel="stylesheet" href="styles.css"> in your HTML to l
       <h1>Dr.Norman Borlaug</h1>
       <p>Lorem ipsum dolor sit amet consectetur.</p>
     </div>
-    <div class="img" id="img-div">
-      <img src="" alt="" />
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, aut
-        autem nisi quos exercitationem unde!
-      </p>
+    <div class="position">
+      <div class="img-container">
+        <div class="img" id="img-div">
+          <img src="" alt="" />
+        </div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt,
+          aut autem nisi quos exercitationem unde!
+        </p>
+      </div>
     </div>
     <div class="extra-title">
       <h3>Here's a time line of Dr.Borlaug's life:</h3>
-      <ul>
-        <li>
-          <h2>1914</h2>
-          - Lorem, ipsum dolor.
-        </li>
-        <li>
-          <h2>1933</h2>
-          - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam
-          perspiciatis dolores obcaecati.
-        </li>
-        <li><h2>1935</h2>- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti omnis quidem architecto nemo adipisci alias exercitationem?</li>
-        <li><h2>1937</h2>- Lorem ipsum dolor sit amet consectetur.</li>
-        <li><h2>1938</h2>- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus facere iusto hic, maiores reprehenderit excepturi voluptatum tempore.</li>
-        <li><h2>1941</h2>- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse, mollitia. Totam sequi vitae laudantium quos, aliquid doloremque.</li>
-        <li><h2>1942</h2>- Lorem ipsum dolor sit.</li>
-        <li><h2>1944</h2>- Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, necessitatibus reiciendis dolorem consequuntur corporis facere aspernatur. Provident blanditiis sequi odit!</li>
-        <li><h2>1945</h2></li>
-        <li><h2>1953</h2></li>
-        <li><h2>1962</h2></li>
-        <li><h2>1970</h2></li>
-        <li><h2>1983</h2></li>
-        <li><h2>1984</h2></li>
-        <li><h2>2005</h2></li>
-        <li><h2>2009</h2></li>
-      </ul>
+      <div class="position">
+        <ul>
+        <li class="year">
+            <h4>1914</h4>
+            <p>- Lorem, ipsum dolor.</p>
+          </li>
+        <li class="year">
+            <h4>1933</h4>
+            <p>
+              - Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Quisquam perspiciatis dolores obcaecati.
+            </p>
+          </li>
+        <li class="year">
+            <h4>1935</h4>
+            <p>
+              - Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Deleniti omnis quidem architecto nemo adipisci alias
+              exercitationem?
+            </p>
+          </li>
+        <li class="year">
+            <h4>1937</h4>
+            <p>- Lorem ipsum dolor sit amet consectetur.</p>
+          </li>
+        <li class="year">
+            <h4>1938</h4>
+            <p>
+              - Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+              facere iusto hic, maiores reprehenderit excepturi voluptatum
+              tempore.
+            </p>
+          </li>
+        <li class="year">
+            <h4>1941</h4>
+            <p>
+              - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse,
+              mollitia. Totam sequi vitae laudantium quos, aliquid doloremque.
+            </p>
+          </li>
+        <li class="year">
+            <h4>1942</h4>
+            <p>- Lorem ipsum dolor sit.</p>
+          </li>
+        <li class="year">
+            <h4>1944</h4>
+            <p>
+              - Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Deleniti, necessitatibus reiciendis dolorem consequuntur corporis
+              facere aspernatur. Provident blanditiis sequi odit!
+            </p>
+          </li>
+        <li class="year">
+            <h4>1945</h4>
+            <p></p>
+            - Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+            maxime.
+          </li>
+        <li class="year">
+            <h4>1953</h4>
+            <p>
+              - Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+              fugit et error iure nostrum distinctio? Eligendi?
+            </p>
+          </li>
+        <li class="year">
+            <h4>1962</h4>
+            <p>
+              - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error
+              dolorem nam eveniet dolor delectus itaque.
+            </p>
+          </li>
+        <li class="year">
+            <h4>1970</h4>
+            <p>- Lorem ipsum dolor sit amet.</p>
+          </li>
+        <li class="year">
+            <h4>1983</h4>
+            <p>
+              - Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Explicabo, rerum.
+            </p>
+          </li>
+        <li class="year">
+            <h4>1984</h4>
+            <p>- Lorem ipsum dolor sit amet consectetur.</p>
+          </li>
+        <li class="year">
+            <h4>2005</h4>
+            <p>
+              - Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Quaerat id assumenda atque minima alias nihil placeat cum dicta
+              fuga harum.
+            </p>
+          </li>
+        <li class="year">
+            <h4>2009</h4>
+            <p>- Lorem ipsum dolor sit.</p>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="string">
       <p>
