--- a/indexx.html
+++ b/indexx.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>FreeCode Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="main">
-<nav class="navbar">
-    <h3><a href="#">About</a> </h3>
-    <h3><a href="#">Work</a></h3>
-    <h3><a href="#">Contact</a></h3>
-</nav>
-<div class="title">
-    <p class="mimic">Hey I am Mimic</p>
-    <p class="web">a web developer</p>
-</div>
-   </section>
-</body>
+      <nav class="navbar">
+        <h3><a href="#">About</a></h3>
+        <h3><a href="#">Work</a></h3>
+        <h3><a href="#">Contact</a></h3>
+      </nav>
+      <div class="title">
+        <p class="mimic">Hey I am Mimic</p>
+        <p class="web">a web developer</p>
+      </div>
+    </section>
+  </body>
 </html>
