--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <p class="paragraph">a web developer</p>
       </section>
       <section id="projects" class="project">
+        <a href="#"></a>
         <section class="extra-title">
           <h1 class="project-tile there">These are some of my projects</h1>
-          <hr />
+          <hr class="white-line" />
         </section>
         <section class="pictures">
           <div>
@@ -91,8 +92,11 @@
         <button class="tugma">Show all ></button>
       </section>
       <section class="footer">
-        <h1>Let's work together...</h1>
-        <p>How do you take your coffee?</p>
+        <div class="footer-title">
+          <h1 class="work">Let's work together...</h1>
+          <p class="coffee">How do you take your coffee?</p>
+        </div>
+
         <div class="icon">
           <div class="icons">
             <h3>
@@ -121,6 +125,12 @@
               >
             </h3>
           </div>
+        </div>
+        <hr class="red-line" />
+        <div class="bottom">
+          <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+          <p>© Created for freeCodeCamp </p>
+
         </div>
       </section>
     </div>
